# Long-Document-Summarization

./: .gitignore  .pylintrc  README.md  Summarization.ipynb  TODO  Test.ipynb  book_loader.py  data_analysis.ipynb  data_loader.py  dev-requirements.txt  environment.yml  evaluate_summaries.py  french_textrank.py  hf_summarizers.py  main.py  my_utils.py  mypy.ini  nlp_utils.py  parameters.json  pyproject.toml  requirements.txt  scores.jsonl  summaries.jsonl  summaries_reader.py  summarization.ipynb  summarizer.py  summarizer_ios.py
LDS/: .gitignore  abs_summarizers.py  book_loader.py  evaluate.py  evaluate_summaries.py  ext_summarizers.py  french_textrank.py  gen_utils.py  hf_summarizers.py  nlp_utils.py  randomsum.py  summarizer_factory.py  summarizer_ios.py  textrank.py
LDS/summarization.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
archive/: pythonrouge_evaluate.py
data/: D5627-Dolan - Annotated.docx  D5627-Dolan.docx  ~$627-Dolan.docx
data/output_summaries/: barthez_summaries.jsonl  camembert_summaries.jsonl  mbart_summaries.jsonl  textrank_flaubert-base-uncased-xnli-sts_summaries.jsonl  textrank_flaubert-education_summaries.jsonl  textrank_flaubert_base_uncased-xnli-sts_summaries.jsonl  textrank_hugorosen_flaubert_summaries.jsonl  textrank_sent-camembert_summaries.jsonl  textrank_sent-sahajtomar_summaries.jsonl  textrank_summaries.jsonl
data/references/: dolan_chapter_1.txt  dolan_chapter_2.txt  dolan_chapter_3.txt
experiments/: ex_hf_summarizers.py
images/: summarization.png:Zone.Identifier
scores/: barthez_scores.json  camembertsum_scores.json  mbart_scores.json  mbartsum_scores.json  randomsum_scores.json  textrank_scores.json
scores/textrank/: textrank_camembert_scores.json  textrank_flaubert-base-uncased-xnli-sts-finetuned-education_scores.json  textrank_flaubert_education_scores.json  textrank_french_semantic_scores.json  textrank_hugorosen_flaubert_base_uncased-xnli-sts_scores.json  textrank_hugorosen_flaubert_scores.json  textrank_inokufu_flaubert-base-uncased-xnli-sts_scores.json  textrank_inokufu_flaubert_scores.json  textrank_sent-camembert_scores.json
src/: book_loader.py  evaluate_summaries.py  french_textrank.py  nlp_utils.py  summarizer_ios.py
